welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:46: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:49: error: expected start of definition
	override def forward()  {
                 ^ZigZag:52: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:55: error: expected start of definition
	override def backward() {
                 ^ZigZag:58: error: Unmatched closing brace '}' ignored here
}
^